[api][integrations] Remove VectorStoreLongTermMemory and refactor vector store API
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>